js/js.translator/testData/incremental/invalidation/moveExportedCallableBetweenModules/main/test.0.kt
import sample.foo

fun test(): Int = foo()
